# actix_mongo_demo

./: Cargo.toml  README.md  log.yml
settings/: db.toml  server.toml  verify.toml
src/: lib.rs  main.rs
src/common/: functions.rs  mod.rs  pr_response.rs  settings.rs  structs.rs
src/controller/: user.rs
src/controllers/: common_controller.rs  mod.rs  user.rs
src/middlewareLocal/: auth.rs  state.rs
src/middleware_local/: auth.rs
src/models/: common_models.rs  mod.rs  user.rs
static/: 404.html
