[package]
name = "actix_demo"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
#workspace = ".."
edition = "2018"

[dependencies]
actix-web = { version = "^1.0.0", features=["ssl"] }
actix-session = "0.2.0"
actix-rt = "0.2.5"
actix-service = "0.4.2"
actix-identity = { git = "https://github.com/huangkaizh/actix-identity" }
actix-files = "0.1.6"

qstring = "0.7.0"

bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#serde_derive = "1.0"
json = "*"

#wither = "0.8.0"
wither = { git = "https://gitee.com/huangkaizh/wither.git", features = ["derive"]}
#wither_derive = "0.8.0"
bson = "0.13"
r2d2 = "0.8.6"
r2d2-mongodb = "0.2.2"
mongodb = "0.3.12"

log = "0.4"
log4rs = { version = "0.8.3", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }

sha2 = "0.8.0"
rand = "0.7.2"
base64 = "0.11.0"
hex = "0.4.0"
chrono = "0.4.9"

reqwest = "0.9.22"

config = "0.10.1"
lazy_static = "^0.2.8"
notify = "^4.0.0"